--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon node index.js"
+    "dev": "nodemon node index.js",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
