--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon node index.js",
-    "heroku-postbuild": "npm run build"
+    "dev": "nodemon node index.js"
   },
   "keywords": [],
   "author": "",
