--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.54.0",
     "nodemon": "^2.0.12",
     "pdf-poppler": "^0.2.1",
+    "pdf2img": "^0.5.0",
     "puppeteer": "^10.2.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8"
