--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "15.x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node index.js",
@@ -22,6 +22,7 @@
     "pdf2img": "^0.5.0",
     "puppeteer": "^10.2.0",
     "puppeteer-extra": "^3.1.18",
-    "puppeteer-extra-plugin-stealth": "^2.7.8"
+    "puppeteer-extra-plugin-stealth": "^2.7.8",
+    "yarn": "^1.22.15"
   }
 }
