--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon node index.js"
+    "pm2": "pm2 start ecosystem.config.js"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +13,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
-    "node-telegram-bot-api": "^0.54.0",
-    "nodemon": "^2.0.12",
-    "pdf-poppler": "^0.2.1",
-    "pdf2img": "^0.5.0",
+    "node-telegram-bot-api": "^0.55.0",
+    "pm2": "^5.1.2",
     "puppeteer": "^10.2.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
